objects/HUD9902ErrorLog__c.object
<CustomObject>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceRecord__c</fullName>
        <formula>IF( ISBLANK(RecordID__c), &apos;Not Available&apos;, HYPERLINK(&apos;/lightning/r/&apos; &amp;  RecordID__c &amp; &apos;/view&apos;, &apos;View Source&apos;, &apos;_blank&apos;))</formula>
        <label>Source Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X9902__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>9902</label>
        <referenceTo>X9902__c</referenceTo>
        <relationshipLabel>HUD 9902 Error Logs</relationshipLabel>
        <relationshipName>HUD_9902_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>HUD 9902 Error Log</label>
    <nameField>
        <displayFormat>HEL-{000000}</displayFormat>
        <label>HUD 9902 Error Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HUD 9902 Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>